Added Not Dispellable patch, Blueprint Loader

--- a/CEO_of_Death/CEO_of_Death.csproj
+++ b/CEO_of_Death/CEO_of_Death.csproj
@@ -22,34 +22,34 @@
 
 	<ItemGroup>
 		<Reference Include="0Harmony">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UnityModManager\0Harmony.dll</HintPath>
 		</Reference>
 		<Reference Include="Assembly-CSharp-firstpass">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
 		</Reference>
 		<Reference Include="Assembly-CSharp">
 			<HintPath>.\lib\Assembly-CSharp_public.dll</HintPath>
 		</Reference>
 		<Reference Include="Owlcat.Runtime.Core">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\Owlcat.Runtime.Core.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\Owlcat.Runtime.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Owlcat.Runtime.UI">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\Owlcat.Runtime.UI.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\Owlcat.Runtime.UI.dll</HintPath>
 		</Reference>
 		<Reference Include="Owlcat.SharedTypes">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\Owlcat.SharedTypes.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\Owlcat.SharedTypes.dll</HintPath>
 		</Reference>
 		<Reference Include="UniRx">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\UniRx.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UniRx.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.CoreModule">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.IMGUIModule">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityModManager">
-			<HintPath>..\..\..\SteamLibrary\steamapps\common\Pathfinder Second Adventure\Wrath_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
+			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 	<ItemGroup>
