Added blueprintloader reference, Beginning ability limit implementation, added control summons

--- a/CEO_of_Death/CEO_of_Death.csproj
+++ b/CEO_of_Death/CEO_of_Death.csproj
@@ -51,6 +51,9 @@
 		<Reference Include="UnityModManager">
 			<HintPath>$(WrathInstallDir)\Wrath_Data\Managed\UnityModManager\UnityModManager.dll</HintPath>
 		</Reference>
+		<Reference Include="WrathModLib">
+		  <HintPath>..\..\WrathModLib\bin\Release\net481\WrathModLib.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="info.json">
@@ -60,12 +63,12 @@
 	<Target Name="CopyDLLs" AfterTargets="Build">
 		<Message Text="copying to Wrath folder" Importance="High" />
 		<Copy SourceFiles="$(TargetDir)$(ProjectName).dll;$(TargetDir)info.json" DestinationFolder="$(WrathInstallDir)\Mods\$(ProjectName)" />
+		<Copy SourceFiles="..\..\WrathModLib\bin\Release\net481\WrathModLib.dll" DestinationFolder="$(WrathInstallDir)\Mods\$(ProjectName)" />
 	</Target>
 	<Target Name="Publicize" AfterTargets="Clean">
 		<ItemGroup>
 			<Assemblies Include="$(WrathInstallDir)\Wrath_Data\Managed\Assembly-CSharp.dll" />
 		</ItemGroup>
-
 		<PublicizeTask InputAssemblies="@(Assemblies)" OutputDir="$(SolutionDir)lib/" />
 	</Target>
 </Project>
